--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -33,19 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "657b5eb0-c767-42dd-beb6-7aa47ddc7bc1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'trandpose' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m transpose\u001b[38;5;241m=\u001b[39m[]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(col):\n\u001b[1;32m----> 8\u001b[0m     trandpose\u001b[38;5;241m.\u001b[39mappend([\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39mrow)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(row):\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(col):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'trandpose' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4]\n",
+      "[2, 5]\n",
+      "[3, 6]\n"
      ]
     }
    ],
@@ -57,7 +55,7 @@
     "col=len(a[0])\n",
     "transpose=[]\n",
     "for i in range(col):\n",
-    "    trandpose.append([0]*row)\n",
+    "    transpose.append([0]*row)\n",
     "for j in range(row):\n",
     "    for k in range(col):\n",
     "        transpose[k][j] = a[j][k]\n",
